<resources>
    <string name="app_name">PayRow Mobile</string>
    <string name="arabic">العربية</string>
    <string name="urdu">اردو</string>
    <string name="hindi">हिंदी</string>
    <string name="bengali">বাংলা</string>
    <string name="malayalam">മലയാളം</string>
    <string name="telugu">తెలుగు</string>
    <string name="chinese">中国人</string>
    <string name="french">Français</string>
    <string name="terms_and_conditions_short_text">Application of the General Terms and Conditions
These general terms and conditions (General Terms and
Conditions) constitute an integral part of the agreement regarding the delivery of the service to the merchant by the supplier.
The general Terms and Conditions shall be applied unless the
merchant and the Supplier have otherwise agreed in writing.
The agreement will enter into force when the parties have
signed the agreement or when the supplier has approved the
agreement form submitted by the merchant for the service.</string>
    <string name="about_us_text">PayRow is a B2B fintech player addressing retail and microfinance industry using the business model of platform-as-a-service. The company has been established in the year 2020 In payment industry veterans PayRow having an inspiring experience to extent in market.</string>
    <string name="about_us_text_two">PayRow drives its services for each region (Middle East - Africa - South Asia) from ideation stage to the final revenue output. By offering company\'s - hardware and software are targeted either towards payment service providers or end merchants and business owners. For joining journey send interest to info@PayRow.ae</string>
    <string name="text_ultimate_fintech_partner">"Ultimate Fintech Partner"</string>
    <string name="text_services">1. SMB Retail – mPos, SoftPos Payment\n2. Delivery Boy - SoftPos Mobile Payment\n3. Enterprise Sub payment Account App\n4. Digital invoice\n5. Payment Transaction Switch
    </string>
    <string name="text_support_services">.Payment settlement\n.Dash Board\n.Tax/VAT Report\n.Purchase Summary\n.Inventory Report\n.Transaction Details\n.Loyalty Points History\n.Profit &amp; Lost Report\n.Business Valuation Report\n.Call Center Support </string>
    <string name="button_width">225dp</string>
    <string-array name="cities">
        <item>Select City</item>
        <item>Dubai</item>
        <item>Abu Dhabi</item>
        <item>Sharjah</item>
        <item>Ajman</item>
        <item>Umm AlQuwain</item>
        <item>Ras AlKhaimah</item>
        <item>Fujairah</item>
    </string-array>
    <string-array name="regcomplaints">
        <item>Registered Complaints</item>
        <item>Payment not working</item>
        <item>App is too slow</item>
        <item>Need help</item>
        <item>App is crashing</item>
    </string-array>
    <string-array name="complaints">
        <item>New Complaints</item>
        <item>Payment not working</item>
        <item>App is too slow</item>
        <item>Need help</item>
        <item>App is crashing</item>
    </string-array>
    <string name="address"></string>
    <string name="address2"></string>
    <string name="customer_copy">Customer Copy</string>
    <string name="i_agree_to_terms_and_conditions">By signing up <b>I</b> agree to terms &amp; conditions</string>
    <string name="terms_and_conditions">Terms &amp; Conditions</string>
    <string name="congratulations_on_successful_registration">Congratulations! You have been successfully registered with PayRow.Your PIN Number will be activated after your uploaded information is verified.</string>
    <string name="no_app_available">No Application Available To View Pdf</string>
    <string name="error_fetching_doc">Error In Fetching Document</string>
    <string name="payrow_footer">&#169;2025 PayRow Company. All Rights Reserved</string>
    <string name="we_have_sent_you_access_code">We have sent you access code via SMS for \nmobile number verification</string>
    <string name="choose_your_favourite_language">Choose your favourite language</string>
    <string name="please_select_a_language">Please select a language to proceed</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="verify_your_identity">Verify your identity</string>
    <string name="fingerprint_authentication">Fingerprint Authentication</string>
    <string name="please_place_your_finger">Please place your finger on the fingerprint sensor to authenticate</string>
    <string name="touch_the_fingerprint_sensor">Touch the fingerprint sensor</string>
    <string name="new_payment">New Payment</string>
    <string name="cash_invoice">Cash Invoice</string>
    <string name="expenses">Expenses</string>
    <string name="payment_history">Payment History</string>
    <string name="admin">Admin</string>
    <string name="contact_payrow">Contact PayRow</string>
    <string name="you_are_about_to_make_a_payment_to">You are about to make a payment</string>
    <string name="invoice_number">Invoice Number</string>
    <string name="add_item">Add Items</string>
    <string name="pay">Pay</string>
    <string name="please_enter_the_amount_to_proceed">Please enter the amount to proceed</string>
    <string name="please_tap_your_card">Please tap your card</string>
    <string name="enter_pin">Enter PIN</string>
    <string name="clear">Clear</string>
    <string name="confirm">Confirm</string>
    <string name="please_enter_pin_to_proceed">Please enter PIN to proceed</string>
    <string name="payment_successful">Payment Successful</string>
    <string name="click_to_view_receipt">Click to view receipt</string>
    <string name="send_digital_receipt">Send digital receipt</string>
    <string name="enter_whatsapp_number">Enter Whatsapp Number</string>
    <string name="enter_your_email_id">Enter Your Email Id</string>
    <string name="send">Send</string>
    <string name="receipt_sent_successfully_to">Receipt sent successfully to</string>
    <string name="home">Home</string>
    <string name="and">and</string>
    <string name="miscellaneuos">Miscellaneous</string>
    <string name="salaries">Salaries</string>
    <string name="rent">Rent</string>
    <string name="enter_customer_name">Enter Customer Name</string>
    <string name="enter_customer_vat_no">Enter Customer VAT No</string>
    <string name="salary_payroll">Salary PayRoll</string>
    <string name="maintenance">Maintenance</string>
    <string name="chillar">Chillar</string>
    <string name="total_sequence">Total Sequence</string>
    <string name="total_debit">Total Debit</string>
    <string name="total_credit">Total Credit</string>
    <string name="quick_view">Quick View</string>
    <string name="average">Average:</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="didnt_receive_otp">Didnt receive the OTP?</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="about_payrow">About PayRow</string>
    <string name="contact_us">Contact US</string>
    <string name="support">Support</string>
    <string name="choose_your_service">Choose Your Service</string>
    <string name="delivery_boy">Delivery POS</string>
    <string name="staff">Staff</string>
    <string name="your_name">Your Name</string>
    <string name="your_email">Your Email</string>
    <string name="your_password">Your Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="owner_name">Owner Name</string>
    <string name="select_city">Select City</string>
    <string name="passport_number">Passport Number</string>
    <string name="passport_expiry_date">Passport Expiry Date</string>
    <string name="card_details">Card Details</string>
    <string name="bank_name">Bank Name</string>
    <string name="card_number">Card Number</string>
    <string name="card_expiry_date">Card Expiry Date</string>
    <string name="card_holder_name">Card Holder Name</string>
    <string name="cvv_number">CVV Number</string>
    <string name="bank_details">Bank Details</string>
    <string name="bank_branch">Bank Branch</string>
    <string name="bank_account">Bank Account</string>
    <string name="iban_number">IBAN Number</string>
    <string name="vat_number">VAT Number</string>
    <string name="address_details"></string>
    <string name="capture_location">Capture Location</string>
    <string name="website">Website</string>
    <string name="str_address">Address</string>
    <string name="smb">SMB</string>
    <string name="invoice_recall">Invoice Recall</string>
    <string name="personal_details">Personal Details</string>
    <string name="license_details">License Details</string>
    <string name="company_name">Company Name</string>
    <string name="license_number">License Number</string>
    <string name="license_expiry_date">License Expiry Date</string>
    <string name="establishment_card_number">Establishment Card Number</string>
    <string name="staff_payroll">Staff PayRoll</string>
    <string name="staff_name">Staff Name</string>
    <string name="mobile_no">Mobile No</string>
    <string name="joining_date">Joining Date</string>
    <string name="visa_no">Visa Number</string>
    <string name="salary">Salary</string>
    <string name="account_no">Account Number</string>
    <string name="add">Add</string>
    <string name="view_staff_list">View Staff List</string>
    <string name="alert">Alert</string>
    <string name="are_you_sure_to_delete_this_item">Are you sure to delete this item?</string>
    <string name="choose_items">Choose Items</string>
    <string name="location_captured">Location Captured</string>
    <string name="leave">Leave</string>
    <string name="employee_relation">Employee Relation</string>
    <string name="employee_certificate">Employee Certificate</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="select_complaint_type">Select Complaint Type</string>
    <string name="payment_not_working">Payment Not Working</string>
    <string name="app_is_too_slow">App is too slow</string>
    <string name="need_help">Need help</string>
    <string name="app_is_crashing">App is crashing</string>
    <string name="payrow_soft_pos_mobile">PayRow Soft POS Mobile</string>
    <string name="digital_ekyc">\u2022 Digital eKYC \n\n\u2022 Support 8 language \n\n\u2022 Provide registration category</string>
    <string name="provide_reg_category">a. Store Manager POS \nb. Delivery POS \nc. Staff POS</string>
    <string name="auth_partner">\u2022 Authorized authentication partner \n\n\u2022 Cash Invoice \n\n\u2022 Invoice recall \n\n\u2022 Dashboard \n\n\u2022 Support center</string>
    <string name="continue_">Continue</string>
    <string name="soft_pos_text"><annotation font="roboto_medium">PayRow SoftPOS is the ideal solution for accepting contactless payments directly on users smartphones, without any other devices.</annotation></string>
    <string name="soft_pos_text_two">\u2022 All you need is a mobile device that allows users to use a mobile device instead of a cash register or POS machine to accept bank cards and QR codes. \n\n\u2022 You will need to log in to the app, enter the transaction amount and confirm it.The cardholder can then hold the credit or debit card or mobile wallet (Apple Pay, Google Pay, Samsung Pay)against the back of the phone until the transaction is complete.</string>
    <string name="the_customer_will_receive_payment_on_same_card_used_for_this_transaction_within_24_hours">The customer will receive payment on same card used for this transaction within 24 hours</string>
    <string name="describe_complaint">Describe Complaint</string>
    <string name="brief_your_complaint">Brief your complaint</string>
</resources>