<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="328dp"
        android:layout_height="370dp"
        android:background="@drawable/button_bg_round_white_fill"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvAlert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/terms_and_conditions"
            android:textColor="#191919"
            android:textSize="24sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/ivDecline"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_partial_approval"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAlert" />

        <TextView
            android:id="@+id/tvAlertMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/the_customer_will_receive_payment_on_same_card_used_for_this_transaction_within_24_hours"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/gray"
            android:textSize="13sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivDecline" />


        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="260dp"
            android:layout_height="44dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/button_round_gray_border"
            android:drawableEnd="@drawable/ic_baseline_thick_gray_forward"
            android:fontFamily="@font/roboto_regular"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/continue_"
            android:textAlignment="viewStart"
            android:textAllCaps="true"
            android:textColor="@color/color_text"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAlertMessage" />


        <Button
            android:id="@+id/btnCancelOrder"
            android:layout_width="260dp"
            android:layout_height="44dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_round_dark_gray_bg_fill"
            android:drawableEnd="@drawable/ic_baseline_close_24"
            android:fontFamily="@font/roboto_regular"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/cancel"
            android:textAlignment="viewStart"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSubmit" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
