<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".contactpayrow.HardwareProductsActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_layout" />

    <ImageView
        android:id="@+id/ivWatermarkTop"
        android:layout_width="36dp"
        android:layout_height="50dp"
        android:layout_marginTop="80dp"
        android:src="@drawable/ic_icon_watermark"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivWatermarkBelow"
        android:layout_width="36dp"
        android:layout_height="50dp"
        android:layout_marginBottom="18dp"
        android:src="@drawable/ic_icon_watermark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingBottom="115dp">

            <ImageView
                android:id="@+id/ivHardwareProducts"
                android:layout_width="140dp"
                android:layout_height="28dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="23dp"
                android:scaleType="fitXY"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvSoftPOSMobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="14dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/payrow_soft_pos_mobile"
                android:textColor="@color/gray"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivHardwareProducts" />

            <ImageView
                android:id="@+id/ivSoftPOSMobile"
                android:layout_width="360dp"
                android:layout_height="296dp"
                android:layout_marginTop="19dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvSoftPOSMobile" />


            <TextView
                android:id="@+id/tvSoftPOS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="32dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/soft_pos_text"
                android:textColor="@color/thick_gray"
                android:textSize="14sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivSoftPOSMobile" />


            <TextView
                android:id="@+id/tvSoftPOS_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/soft_pos_text_two"
                android:textColor="@color/thick_gray"
                android:textSize="14sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvSoftPOS" />


            <TextView
                android:id="@+id/tvPayRowNetProvides"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/roboto_medium"
                android:text="PayRow Net Provides"
                android:textColor="#808080"
                android:textSize="16sp"
                android:visibility="gone"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivSoftPOSMobile" />

            <TextView
                android:id="@+id/tvPOSMachine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/digital_ekyc"
                android:textColor="@color/thick_gray"
                android:textSize="14sp"
                android:visibility="gone"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvPayRowNetProvides" />

            <TextView
                android:id="@+id/tvDigitalEKYC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/digital_ekyc"
                android:textColor="@color/thick_gray"
                android:textSize="14sp"
                android:visibility="gone"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvPayRowNetProvides" />

            <TextView
                android:id="@+id/tvRegCat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="52dp"
                android:layout_marginTop="6dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/provide_reg_category"
                android:textColor="@color/thick_gray"
                android:textSize="14sp"
                android:visibility="gone"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDigitalEKYC" />


            <TextView
                android:id="@+id/tvAuthPartner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="13dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/auth_partner"
                android:textColor="@color/thick_gray"
                android:textSize="12sp"
                android:visibility="gone"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvRegCat" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:text="@string/payrow_footer"
        android:textColor="@color/color_text_80"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>